@@ -19,6 +19,7 @@
  ***************************************************************************/
 #include "rpcserver.h"
 #include <QHostAddress>
+#include <QThread>
 #include <unistd.h>
 #include <string.h>
 #include <net/portlist.h>
@@ -29,12 +30,14 @@
 #include <bcodec/bdecoder.h>
 #include <bcodec/bencoder.h>
 #include <util/functions.h>
-#include <k3socketdevice.h>
 #include "rpccall.h"
 #include "rpcmsg.h"
 #include "kbucket.h"
 #include "node.h"
 #include "dht.h"
+#include <net/socket.h>
+
+
 
 
 using namespace KNetwork;
@@ -42,21 +45,106 @@ using namespace bt;
 
 namespace dht
 {
+	class RPCServerThread : public QThread
+	{
+	public:
+		RPCServerThread(net::Socket* socket,RPCServer* rpc) : running(false),socket(socket),rpc(rpc)
+		{
+		}
+		
+		virtual ~RPCServerThread()
+		{
+			qDeleteAll(incoming);
+		}
+		
+		void handlePacket()
+		{
+			QMutexLocker lock(&mutex);
+			QByteArray data(socket->bytesAvailable(),0);
+			net::Address addr;
+			if (socket->recvFrom((bt::Uint8*)data.data(),data.size(),addr) <= 0)
+				return;
+			
+			
+			BNode* n = 0;
+			try
+			{
+				// read and decode the packet
+				BDecoder bdec(data,false);
+				n = bdec.decode();
+				
+				if (!n || n->getType() != BNode::DICT)
+				{
+					delete n;
+					return;
+				}
+				
+				// try to make a RPCMsg of it
+				MsgBase* msg = MakeRPCMsg((BDictNode*)n,rpc);
+				if (msg)
+				{
+					msg->setOrigin(addr);
+					incoming.append(msg);
+				}
+			}
+			catch (bt::Error & err)
+			{
+				Out(SYS_DHT|LOG_IMPORTANT) << "Error happened during parsing : " << err.toString() << endl;
+			}
+			delete n;
+		}
+		
+		virtual void run()
+		{
+			running = true;
+			fd_set fds;
+			FD_ZERO(&fds);
+			while (running)
+			{
+				int fd = socket->fd();
+				FD_SET(fd,&fds);
+				struct timeval tv = {0,500000};
+				if (select(fd + 1,&fds,0,0,&tv) > 0)
+				{
+					handlePacket();
+				}
+			}
+		}
+		
+		void stop()
+		{
+			running = false;
+		}
+		
+		MsgBase* nextMessage()
+		{
+			if (incoming.isEmpty())
+				return 0;
+			
+			MsgBase* msg = incoming.first();
+			incoming.pop_front();
+			return msg;
+		}
+		
+		QList<MsgBase*> incoming;
+		QMutex mutex;
+		bool running;
+		net::Socket* socket;
+		RPCServer* rpc;
+	};
 	
 
 
 	RPCServer::RPCServer(DHT* dh_table,Uint16 port,QObject *parent) : QObject(parent),dh_table(dh_table),next_mtid(0),port(port)
 	{
-		sock = new KDatagramSocket(this);
-		sock->setBlocking(false);
-		sock->setAddressReuseable(true);
+		sock = 0;
+		listener_thread = 0;
 	}
 
 
 	RPCServer::~RPCServer()
 	{
 		bt::Globals::instance().getPortList().removePort(port,net::UDP);
-		sock->close();
 		calls.setAutoDelete(true);
 		calls.clear();
 		qDeleteAll(call_queue);
@@ -65,7 +153,6 @@ namespace dht
 	
 	void RPCServer::start()
 	{
-		sock->setBlocking(true);
 		QString ip = NetworkInterfaceIPAddress(NetworkInterface());
 		
 		QStringList possible;
@@ -77,9 +164,13 @@ namespace dht
 		
 		foreach (const QString & addr,possible)
 		{
-			if (!sock->bind(addr,QString::number(port)))
+			net::Address address(addr,port);
+			sock = new net::Socket(false,address.ipVersion());
+			if (!sock->bind(addr,port,false))
 			{
 				Out(SYS_DHT|LOG_IMPORTANT) << "DHT: Failed to bind to " << addr << ":" << port << endl;
+				delete sock;
+				sock = 0;
 			}
 			else
 			{
@@ -88,14 +179,20 @@ namespace dht
 				break;
 			}
 		}
-		sock->setBlocking(false);
-		connect(sock,SIGNAL(readyRead()),this,SLOT(readPacket()));
+		listener_thread = new RPCServerThread(sock,this);
+		listener_thread->start(QThread::IdlePriority);
 	}
 		
 	void RPCServer::stop()
 	{
 		bt::Globals::instance().getPortList().removePort(port,net::UDP);
 		sock->close();
+		listener_thread->stop();
+		listener_thread->wait();
+		delete listener_thread;
+		listener_thread = 0;
+		delete sock;
+		sock = 0;
 	}
 	
 #if 0
@@ -115,74 +212,39 @@ namespace dht
 	}
 #endif
 
-	void RPCServer::readPacket()
+	void RPCServer::handlePackets()
 	{
-		if (sock->bytesAvailable() == 0)
-		{
-			Out(SYS_DHT|LOG_NOTICE) << "0 byte UDP packet " << endl;
-			// KDatagramSocket wrongly handles UDP packets with no payload
-			// so we need to deal with it oursleves
-			int fd = sock->socketDevice()->socket();
-			char tmp;
-			read(fd,&tmp,1);
-			return;
-		}
+		// lock the thread
+		QMutexLocker lock(&listener_thread->mutex);
 		
-		KDatagramPacket pck = sock->receive();
-		/*
-		Out(SYS_DHT|LOG_DEBUG) << "RPCServer::readPacket" << endl;
-		PrintRawData(pck.data());
-		*/
-		BNode* n = 0;
-		try
+		MsgBase* msg = 0;
+		while ((msg = listener_thread->nextMessage()) != 0)
 		{
-		// read and decode the packet
-			BDecoder bdec(pck.data(),false);	
-			n = bdec.decode();
-			
-			if (!n || n->getType() != BNode::DICT)
-			{
-				delete n;
-				return;
-			}
-			
-			// try to make a RPCMsg of it
-			MsgBase* msg = MakeRPCMsg((BDictNode*)n,this);
-			if (msg)
-			{
-				msg->setOrigin(pck.address());
-				msg->apply(dh_table);
+			msg->apply(dh_table);
 			// erase an existing call
-				if (msg->getType() == RSP_MSG && calls.contains(msg->getMTID()))
-				{
+			if (msg->getType() == RSP_MSG && calls.contains(msg->getMTID()))
+			{
 				// delete the call, but first notify it off the response
-					RPCCall* c = calls.find(msg->getMTID());
-					c->response(msg);
-					calls.erase(msg->getMTID());
-					c->deleteLater();
-					doQueuedCalls();
-				}
-				delete msg;
+				RPCCall* c = calls.find(msg->getMTID());
+				c->response(msg);
+				calls.erase(msg->getMTID());
+				c->deleteLater();
+				doQueuedCalls();
 			}
+			delete msg;
 		}
-		catch (bt::Error & err)
-		{
-			Out(SYS_DHT|LOG_IMPORTANT) << "Error happened during parsing : " << err.toString() << endl;
-		}
-		delete n;
-
-		if (sock->bytesAvailable() > 0)
-			readPacket();
 	}
 	
 	
-	void RPCServer::send(const KNetwork::KSocketAddress & addr,const QByteArray & msg)
+	void RPCServer::send(const net::Address & addr,const QByteArray & msg)
 	{
-		sock->send(KNetwork::KDatagramPacket(msg,addr));
+		if (sock)
+			sock->sendTo((const bt::Uint8*)msg.data(),msg.size(),addr);
 	}
 	
 	RPCCall* RPCServer::doCall(MsgBase* msg)
 	{
+		QMutexLocker lock(&mutex);
 		Uint8 start = next_mtid;
 		while (calls.contains(next_mtid))
 		{
@@ -215,6 +277,7 @@ namespace dht
 	
 	void RPCServer::timedOut(Uint8 mtid)
 	{
+		QMutexLocker lock(&mutex);
 		// delete the call
 		RPCCall* c = calls.find(mtid);
 		if (c)
@@ -244,12 +307,17 @@ namespace dht
 		}
 	}
 	
-	const RPCCall* RPCServer::findCall(Uint8 mtid) const
+	Method RPCServer::findMethod(Uint8 mtid)
 	{
-		return calls.find(mtid);
+		QMutexLocker lock(&mutex);
+		const RPCCall* call = calls.find(mtid);
+		if (call)
+			return call->getMsgMethod();
+		else
+			return dht::NONE;
 	}
 	
-	void RPCServer::ping(const dht::Key & our_id,const KNetwork::KSocketAddress & addr)
+	void RPCServer::ping(const dht::Key & our_id,const net::Address & addr)
 	{
 		Out(SYS_DHT|LOG_NOTICE) << "DHT: pinging " << addr.nodeName() << endl;
 		PingReq* pr = new PingReq(our_id);
