@@ -13,6 +13,7 @@ Changes in 3.3:
 - Make it possible to disable automatic update in webinterface
 - Make playlist sortable in media player plugin
 - Add URL drop support to view (208739)
+- DHT packet receiving and parsing moved to separate thread (208801)
 
 Changes in 3.3beta1:
 - Cleanup plugin list (180402)
